@@ -59,6 +59,7 @@ Mejorado ZX Vision:
 - Avisar en la marca de redimensionado cuando una ventana se tiene que aumentar de tamaño (porque hay texto mas allá del tamaño actual)
 - Permitir a una ventana desactivar acciones de scroll
 - El Process switcher se ubica en la parte izquierda-abajo de la pantalla por defecto
+- Ahora las barras de arcoiris en el título de ventanas son visibles en todos los estilos de GUI cuando aparece un error o un mensaje de splash
 
 Mejorado ZX Desktop:
 - Permitir activar/desactivar botones superiores e inferiores de manera independiente
