@@ -59,6 +59,7 @@ Improved ZX Vision:
 - Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
 - Allow a window to disable scroll actions
 - Process switcher is located at bottom-left part of the display by default
+- Now rainbow bars on windows title are visible on all GUI Styles when an error or splash message appears
 
 Improved ZX Desktop:
 - Allow to enable/disable upper and lower buttons independently
